FreeRADIUS 3.0.23 Mon 17 May 2021 12:00:00 EDT urgency=low
	Feature improvements
	* Update dictionary.aruba

	Bug fixes

FreeRADIUS 3.0.22 Mon 17 May 2021 12:00:00 EDT urgency=low
	Feature improvements
	* Many new "unlang" documentation files.  See "make docsite"
	  and then see build/docsite/freeradius-server/*/index.html
	* Limited support for dynamic home servers.  See proxy.conf
	  and doc/configuration/dynamic_home_servers.md
	* Add support for prepend operator ^=.  See "man unlang" for
	  for details.
	* Added rlm_totp, for use with the Google Authenticator app.
	  See mods-available/totp.
	* The default minimum TLS version is now TLS 1.2, as per RFC 8996.
	  Older versions can be allowed by setting tls_min_version, and
	  updating "cipher_list".
	* Significantly improve the readability and contents of TLS
	  debug messages.
	* Allow CoA and Disconnect messages over TLS sockets.
	  Fixes #3356.
	* Automatically set fragment size / MTU, so that PEAP/EAP-TLS
	  works, and no longer requires manual changes to the configuration.
	* Allow "configurable_client_cert=yes" for EAP-TLS.  This should
	  only be used for a "walled garden".  See mods-available/eap
	* Add TLS 1.2 support for EAP-Fast.  Patches from Alex Clouter.
	* Add ca_path_reload_interval option for tls.  See mods-available/eap.
	  Fixes #1831.  Patch from Boris Lytochkin.
	* Abfab-tls updates from Alejandro Perez.
	* Add "tls_min_version" to ldap module configuration.
	* We now support running policies when receiving a RadSec connection.
	  See sites-available/default, "New-TLS-Connection".
	* Update TLS "ecdh_curve" code to allow for multiple curves.
	* Allow delta CRLs.  Fixes #3393.
	* add rlm_sql_map, which can handle multiple columns from an SQL
	  query.  See raddb/mods-available/sql_map.
	* New xlat for setting status of rlm_always instances and new
	  resource-check example virtual server for manipulating control flow
	  in unlang policies based on status of some external resource.