@@ -585,7 +585,7 @@ void radius_event_free(void);
 int radius_event_process(void);
 void radius_update_listener(rad_listen_t *listener);
 void revive_home_server(void *ctx);
-void mark_home_server_dead(home_server_t *home, struct timeval *when);
+void mark_home_server_dead(home_server_t *home, struct timeval *when, bool down);
 
 /* evaluate.c */
 typedef struct fr_cond_t fr_cond_t;
