@@ -41,6 +41,7 @@ typedef enum {
 	HOME_STATE_ZOMBIE,
 	HOME_STATE_IS_DEAD,
 	HOME_STATE_CONNECTION_FAIL,
+	HOME_STATE_ADMIN_DOWN,
 } home_state_t;
 
 typedef struct fr_socket_limit_t {
