@@ -1,6 +1,9 @@
 FreeRADIUS 3.0.23 Mon 17 May 2021 12:00:00 EDT urgency=low
 	Feature improvements
 	* Update dictionary.aruba
+	* Add "set home_server state ... down" in order to mark the
+	  home server as administratively down.  Use "alive" to bring
+	  it back to life.
 
 	Bug fixes
 
